Refactor to senior-level codebase with Strudel URL sharing
- Add centralized types, constants, and validation utilities
- Update StrudelPlayer to use pre-generated shareable URLs from strudel.cc
- Add performance utilities (memoize, debounce, throttle)
- Add image optimization utilities
- Add service worker for caching
- Fix 404 page paths with ROUTES constant
- Update port to 4322
- Improve component props and accessibility
- Add comprehensive JSDoc documentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,23 @@
 			"@components/*": ["src/components/*"],
 			"@layouts/*": ["src/layouts/*"],
 			"@styles/*": ["src/styles/*"],
-			"@data/*": ["src/data/*"]
+			"@data/*": ["src/data/*"],
+			"@data": ["src/data/index.ts"],
+			"@types/*": ["src/types/*"],
+			"@types": ["src/types/index.ts"],
+			"@utils/*": ["src/utils/*"],
+			"@utils": ["src/utils/index.ts"],
+			"@constants/*": ["src/constants/*"],
+			"@constants": ["src/constants/index.ts"]
 		},
 		"jsx": "react-jsx",
-		"jsxImportSource": "react"
+		"jsxImportSource": "react",
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"forceConsistentCasingInFileNames": true
 	},
 	"include": ["src/**/*", "src/**/*.astro"],
 	"exclude": ["node_modules"]
